--- a/RemoteAdsSdk/src/main/AndroidManifest.xml
+++ b/RemoteAdsSdk/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
         android:largeHeap="true"
         android:requestLegacyExternalStorage="true"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AdsSdk"
         android:usesCleartextTraffic="true"
+        tools:replace="android:theme"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity3"
