--- a/RemoteAdsSdk/src/main/AndroidManifest.xml
+++ b/RemoteAdsSdk/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
 
         <property
             android:name="android.adservices.AD_SERVICES_CONFIG"
-            android:resource="@xml/gma_ad_services_config" />
+            android:resource="@xml/gma_ad_services_config"
+            tools:replace="android:resource" />
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
